fixed main content pushed too low on mobile.

--- a/css/styleguide.scss
+++ b/css/styleguide.scss
@@ -262,10 +262,13 @@
 .main-content {
   @include position(absolute, 4rem 0 0 null);
   display: inline-block; // starting: not scrolled
-  margin-top: 4rem; // starting: not scrolled
   position: relative;
   width: 100%;
-  top: 6.3rem; // height of disclaimer + navbar on mobile
+
+  @include media($nav-width) {
+    margin-top: 4rem; // starting: not scrolled
+    top: 6.3rem; // height of disclaimer + navbar on mobile
+  }
 
   @include media($nav-width) {
     width: calc(100% - #{$width-nav-sidebar});
